# recall-ai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  LICENSE  README.md  Recall_AI_Extension_PRD.md  docker-compose.yml  nixpacks.beat.toml  nixpacks.toml  nixpacks.worker.toml  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  railpack.beat.json  railpack.json  railpack.worker.json  railway.beat.json  railway.json  railway.worker.json  turbo.json
.claude/: settings.json
.claude/agents/: architect.md  coder.md  ops.md  reviewer.md  tester.md
.claude/commands/: plan.md  review.md  session-end.md
.github/: BRANCH_PROTECTION.md  CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
.opencode/plans/: 2026-06-30-fix-interest-tags-content-gen.md
apps/api/: .env.example  alembic.ini  package.json  tailwind.config.js
apps/api/alembic/: env.py
apps/api/app/: main.py
apps/api/plans/: 2026-05-04-scaffold-fastapi-entry.md  2026-05-04-switch-to-openrouter.md  (+25 more)
apps/extension/: manifest.json  package.json  sidepanel.html  tsconfig.json  vite.config.ts
apps/web/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: index.css  (+3 more)
docs/adr/: 0001-empty-string-sentinel-for-enrichment-state.md  0002-session-cookie-again-requeue.md  0003-celery-tasks-use-asyncio-run-not-sync-engine.md  0004-per-user-timezone-on-user-model.md  0005-enrichment-attempt-tracking.md  0006-hard-rating-as-anki-like-penalty.md  0007-denylist-content-safety-on-llm-output.md  0008-no-vocab-delete-endpoint.md
docs/agents/: domain.md  issue-tracker.md
scripts/: dev_reset.sh
(+192 files in other folders)
