[project]
name = "recall-ai"
version = "0.1.0"
description = "Spaced-repetition vocabulary trainer for ESL learners."
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "celery[redis]>=5.4",
    "jinja2>=3.1",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "tdd-guard-pytest>=0.1",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
tdd_guard_project_root = "/Users/rizal/GDrive/recall-ai"
testpaths = ["apps/api/tests"]
pythonpath = ["apps/api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["apps/api/app"]
mypy_path = "apps/api"
explicit_package_bases = true
